Quinto Commit, Se agrego seccion quienes somos

--- a/index.html
+++ b/index.html
@@ -78,6 +78,66 @@
     </header>
 
 
+     <!-- Sección de presentación, utilizando favicons y 3 párrafos (debe desaparecer en tamaños pequeños de pantalla). -->
+    <!-- Tooltips en iconos -->
+    <section>
+        <div class="container d-none d-sm-block text-white" id="presentacion">
+            <div class="row d-flex justify-content-center">
+
+                <div class="col-sm-12 text-center mt-5 mb-5">
+                    <h2>¿QUIÉNES SOMOS?</h2>
+                    <hr>
+                </div>
+
+                <!-- Tooltips en los iconos -->
+
+                <div class="col-sm-4">
+                    <i class="fa-solid fa-plane fa-2x d-block bg-info text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="tooltip de avioncito"></i>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, nesciunt fugit sint, sunt
+                        veniam magnam debitis voluptatum suscipit facere laudantium doloremque, recusandae id enim
+                        delectus voluptatem cumque non ipsum obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.</p>
+                    <i class="fa-solid fa-mountain fa-2x d-block bg-info text-center" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    data-bs-title="tooltip de Montañita"></i>
+                </div>
+                <div class="col-sm-4">
+                    <i class="fa-sharp fa-solid fa-map-location-dot fa-2x d-block bg-info text-center" data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="tooltip de Ubicacion"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores debitis dolorum delectus ullam
+                        nesciunt, sint sed, ad enim vero, officia commodi aspernatur architecto autem a. Quas voluptatem
+                        nulla modi harum?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corrupti dignissimos beatae,
+                        culpa facilis, debitis iusto possimus perferendis eaque magni, ullam aliquam praesentium magnam
+                        ipsam facere voluptatibus cumque quis. Earum.</p>
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+
+
 
 
 
