sexto Commit, Se agrego seccion destacados

--- a/index.html
+++ b/index.html
@@ -137,6 +137,71 @@
 
     </section>
 
+      <!-- Sección de destacados, que muestre 4 cards (tarjetas) con la imagen e información asociada. -->
+    <!-- Se agrego efecto en las imagenes con jQuery -->
+    <section>
+        <div class="container my-5" id="destacados">
+            <div class="row d-flex justify-content-center">
+
+                <div class="col-sm-12 text-white text-center mb-5">
+                    <h2>DESTACADOS</h2>
+                    <hr>
+                </div>
+
+                <div class="col-sm-3 d-flex justify-content-center mb-3 mb-sm-0">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/img/card1.jpg" class="card-img-top imgCard" alt="...">
+                        <div class="card-body bg-info text-white ">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text bodyCard">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3 d-flex justify-content-center mb-3 mb-sm-0">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/img/card2.jpg" class="card-img-top imgCard" alt="...">
+                        <div class="card-body bg-info text-white ">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text bodyCard">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <!--  height="180" -->
+                <div class="col-sm-3 d-flex justify-content-center mb-3 mb-sm-0">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/img/card3.jpg" class="card-img-top imgCard" alt="...">
+                        <div class="card-body bg-info text-white ">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text bodyCard">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3 d-flex justify-content-center mb-3 mb-sm-0">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets/img/card4.jpg" class="card-img-top imgCard" alt="...">
+                        <div class="card-body bg-info text-white ">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text bodyCard">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
