--- a/index.html
+++ b/index.html
@@ -203,6 +203,58 @@
         </div>
     </section>
 
+     <!-- Sección de formulario de contacto. -->
+    <!-- Se agregfo un Alert en el boton enviar con Jquery -->
+
+    <section>
+        <div class="container text-white my-5" id="formulario">
+
+            <div class="col-12 text-center">
+                <h2>CONTACTO</h2>
+                <hr>
+            </div>
+
+            <div class="col-12 d-flex justify-content-center d-sm-block">
+                <form>
+                    <div class="mb-3 ">
+                        <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Asunto</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button class="btn btn-primary" id="enviarMensaje">Enviar</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección footer con links a las redes sociales. -->
+    <footer>
+        <div class="bg-info py-5">
+            <div class="container text-white text-center">
+                <div class="row">
+                    <div class="col-12 col-sm-4 mb-4 mb-sm-0 fs-3 ">VIAJES CHILE</div>
+                    <div class="col-12 col-sm-4 ms-auto">
+                        <a href="https:\\www.github.com" target="_blank"><i
+                                class="fa-brands fa-square-github fa-2x mx-2"></i></a>
+                        <a href="http:\\www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin fa-2x mx-2"></i></a>
+                        <a href="http:\\www.twitter.com" target="_blank"> <i class="fa-brands fa-square-twitter fa-2x mx-2"></i></a>
+                        <a href="http:\\www.facebook.com" target="_blank"> <i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
