--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <button class="btn btn-primary" id="enviarMensaje">Enviar</button>
+                    <button class="btn btn-info" id="enviarMensaje">Enviar</button>
                 </form>
             </div>
         </div>
